--- a/settings.json
+++ b/settings.json
@@ -9,10 +9,10 @@
 	"language":"ind",
 	"ownerNumber": "6281312452957",
 	"ownerNumberr": "6281312452957",
-	"cr": "@RakiBotz",
+	"cr": "@SanzBot",
 	"ownername": "Raki",
-	"botname":"RakiBotz",
+	"botname":"SanzBot",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  RakiBotz  」\nCreated By @RakiStore"
+	"fake": " 「  SanzBot  」\nCreated By @RakiStore"
 }
